Stop body overflow
Fix skewed backdrop causing horizontal scrollbar at narrow window sizes

--- a/styles/global.css
+++ b/styles/global.css
@@ -63,6 +63,10 @@ body,
 	background-color: var(--color-dark-400);
 }
 
+body {
+	overflow-x: hidden;
+}
+
 :root {
 	--color-accent-100: #ff6b7b;
 	--color-accent-400: #fe4c5f;
